2004-08-31 Scott Dattalo <scott@dattalo.com>
	* cli/scan.ll, cli/parse.yy:
	Added language support for macro definitions. (although,
	macros are not yet supported).
	
2004-08-29 Borut Razem <borut.razem@siol.net>
	* plat/win32/gsim.def, cli/makefile.migw, src/makefile.migw,
	  cli/cli.vcproj, src/src.vcproj: updated
	* cli/errors.h, cli/scan.ll: corrected include paths
	* plat/win32/gpsim.nsi: gpsom.pdf included in WIN32 setup
	* doc/gpsimWin32.html: gtk+ 2.4.7

2004-08-27 Scott Dattalo <scott@dattalo.com>
	* src/breakpoints.cc, src/gpsim_object.cc, src/gpsim_object.h,
	  src/modules.cc, src/modules.h, src/pic-processor.cc,
	  gui/gui_src_asm.cc, gui/gui_statusbar.cc:
	The Module class was overriding functionality provided in the
	gpsimObject class. This caused problems for external processors 
	(That is, processors not a part of gpsim).

2004-08-26 Scott Dattalo <scott@dattalo.com>
	* src/gpsim_object.cc, src/gpsim_object.h: New files that
	support the gpsimObject class. This is a base class for 
	almost all gpsim objects.
	* cli/viewable.cc, cli/viewable.h: Removed. The functionality
	that was provide by these was moved to gpsimObject.
	* src/Makefile.am, src/modules.h, src/registers.cc,
	  src/registers.h, src/symbol.cc, src/value.cc, src/value.h, 
	  cli/Makefile.am, cli/cmd_x.cc, cli/command.cc, cli/command.h,
	  cli/expr.cc, cli/expr.h, cli/parse.yy:
	Added the gpsimObject Meta class.
	Added support for symbolically viewing registers with the 'x' 
	command.
	Added support for viewing a range of registers.


2004-08-26 Scott Dattalo <scott@dattalo.com>
	* src/stimuli.cc, src/symbol.cc, src/symbol.h,
	  gui/gui_profile.cc, gui/gui_stack.cc, gui/gui_symbols.cc
	  cli/scan.ll:
	The symbol class is now derived from the gpsimValue class.
	This change allows some of the recent enhancements created
	for other things to be applied to symbols as well.
	* examples/14bit/p16c64_pwm.stc, examples/14bit/portc_stim.stc: