@@ -22,8 +22,9 @@ libgpsimcli_la_SOURCES = \
 	cmd_list.cc \
 	cmd_load.cc \
 	cmd_log.cc \
-	cmd_node.cc \
+	cmd_macro.cc \
 	cmd_module.cc \
+	cmd_node.cc \
 	cmd_processor.cc \
 	cmd_quit.cc \
 	cmd_reset.cc \
